src/ru/spbau/tinydb/grammar/SQLGrammarParser.java
// Generated from ../src/SQLGrammar.g4 by ANTLR 4.4

    package ru.spbau.tinydb.grammar;

    import java.util.*;
    import ru.spbau.tinydb.queries.*;
    import ru.spbau.tinydb.expressions.*;
    import ru.spbau.tinydb.expressions.bool.*;
    import ru.spbau.tinydb.expressions.comparison.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OR=1, AND=2, NOT=3, TRUE=4, FALSE=5, INTEGER_TYPE=6, DOUBLE_TYPE=7, VAR_CHAR_TYPE=8, 
		CREATE=9, UNIQUE=10, INDEX=11, USING=12, BTREE=13, HASH=14, ASC=15, DESC=16, 
		DELETE=17, INSERT=18, INTO=19, VALUES=20, UPDATE=21, SET=22, TABLE=23, 
		SELECT=24, FROM=25, WHERE=26, INNER=27, JOIN=28, ON=29, COMMA=30, ASTERISC=31, 
		LEFT_PARENTHESIS=32, RIGHT_PARENTHESIS=33, SEMICOLON=34, WHITE_SPACE=35, 
		LOWER_CASE=36, UPPER_CASE=37, UNDERLINE=38, DECIMAL_DIGIT=39, SIGN=40, 
		DECIMAL_POINT=41, ARROW=42, EQUAL=43, NOT_EQUAL=44, LESS=45, LESS_OR_EQUAL=46, 
		GREATER=47, GREATER_OR_EQUAL=48, QUOTES=49;
	public static final String[] tokenNames = {
		"<INVALID>", "'OR'", "'AND'", "'NOT'", "'TRUE'", "'FALSE'", "'INTEGER'", 
		"'DOUBLE'", "'VARCHAR'", "'CREATE'", "'UNIQUE'", "'INDEX'", "'USING'", 
		"'BTREE'", "'HASH'", "'ASC'", "'DESC'", "'DELETE'", "'INSERT'", "'INTO'", 
		"'VALUES'", "'UPDATE'", "'SET'", "'TABLE'", "'SELECT'", "'FROM'", "'WHERE'", 
		"'INNER'", "'JOIN'", "'ON'", "','", "'*'", "'('", "')'", "';'", "WHITE_SPACE", 
		"LOWER_CASE", "UPPER_CASE", "'_'", "DECIMAL_DIGIT", "SIGN", "'.'", "'->'", 
		"'='", "'!='", "'<'", "'<='", "'>'", "'>='", "'''"
	};
	public static final int
		RULE_script = 0, RULE_query = 1, RULE_createTable = 2, RULE_attribute = 3, 
		RULE_dataType = 4, RULE_varCharType = 5, RULE_value = 6, RULE_integerLiteral = 7, 
		RULE_doubleLiteral = 8, RULE_varCharLiteral = 9, RULE_firstLevelId = 10, 
		RULE_idSuffix = 11, RULE_createIndex = 12, RULE_selectFrom = 13, RULE_insertInto = 14, 
		RULE_updateSet = 15, RULE_assignmentExpression = 16, RULE_deleteFrom = 17, 
		RULE_filter = 18, RULE_whereCondition = 19, RULE_selectionTable = 20, 
		RULE_joinOnExpression = 21, RULE_secondLevelId = 22, RULE_booleanExpression = 23, 
		RULE_orExpression = 24, RULE_andExpression = 25, RULE_booleanFactor = 26, 
		RULE_booleanLiteral = 27, RULE_comparisonExpression = 28, RULE_equalExpression = 29, 
		RULE_notEqualExpression = 30, RULE_lessExpression = 31, RULE_lessOrEqualExpression = 32, 
		RULE_greaterExpression = 33, RULE_greaterOrEqualExpression = 34;
	public static final String[] ruleNames = {
		"script", "query", "createTable", "attribute", "dataType", "varCharType", 
		"value", "integerLiteral", "doubleLiteral", "varCharLiteral", "firstLevelId", 
		"idSuffix", "createIndex", "selectFrom", "insertInto", "updateSet", "assignmentExpression", 
		"deleteFrom", "filter", "whereCondition", "selectionTable", "joinOnExpression", 
		"secondLevelId", "booleanExpression", "orExpression", "andExpression", 
		"booleanFactor", "booleanLiteral", "comparisonExpression", "equalExpression", 
		"notEqualExpression", "lessExpression", "lessOrEqualExpression", "greaterExpression", 
		"greaterOrEqualExpression"
	};

	@Override
	public String getGrammarFileName() { return "SQLGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<IQuery> result;
		public QueryContext query;
		public TerminalNode EOF() { return getToken(SQLGrammarParser.EOF, 0); }
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);

		    List<IQuery> result = new ArrayList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70); ((ScriptContext)_localctx).query = query();

				        result.add(((ScriptContext)_localctx).query.result);
				    
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << INSERT) | (1L << UPDATE) | (1L << SELECT))) != 0) );
			setState(77); match(EOF);

			        ((ScriptContext)_localctx).result =  Collections.unmodifiableList(result);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public IQuery result;
		public CreateTableContext createTable;
		public CreateIndexContext createIndex;
		public SelectFromContext selectFrom;
		public InsertIntoContext insertInto;
		public UpdateSetContext updateSet;
		public DeleteFromContext deleteFrom;
		public TerminalNode SEMICOLON() { return getToken(SQLGrammarParser.SEMICOLON, 0); }
		public CreateIndexContext createIndex() {
			return getRuleContext(CreateIndexContext.class,0);
		}
		public SelectFromContext selectFrom() {
			return getRuleContext(SelectFromContext.class,0);
		}
		public DeleteFromContext deleteFrom() {
			return getRuleContext(DeleteFromContext.class,0);
		}
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public InsertIntoContext insertInto() {
			return getRuleContext(InsertIntoContext.class,0);
		}
		public UpdateSetContext updateSet() {
			return getRuleContext(UpdateSetContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				{
				setState(80); ((QueryContext)_localctx).createTable = createTable();

				        ((QueryContext)_localctx).result =  ((QueryContext)_localctx).createTable.result;
				    
				}
				}
				break;
			case 2:
				{
				{
				setState(83); ((QueryContext)_localctx).createIndex = createIndex();

				        ((QueryContext)_localctx).result =  ((QueryContext)_localctx).createIndex.result;
				    
				}
				}
				break;
			case 3:
				{
				{
				setState(86); ((QueryContext)_localctx).selectFrom = selectFrom();

				        ((QueryContext)_localctx).result =  ((QueryContext)_localctx).selectFrom.result;
				    
				}
				}
				break;
			case 4:
				{
				{
				setState(89); ((QueryContext)_localctx).insertInto = insertInto();

				        ((QueryContext)_localctx).result =  ((QueryContext)_localctx).insertInto.result;
				    
				}
				}
				break;
			case 5:
				{
				{
				setState(92); ((QueryContext)_localctx).updateSet = updateSet();

				        ((QueryContext)_localctx).result =  ((QueryContext)_localctx).updateSet.result;
				    
				}
				}
				break;
			case 6:
				{
				{
				setState(95); ((QueryContext)_localctx).deleteFrom = deleteFrom();

				        ((QueryContext)_localctx).result =  ((QueryContext)_localctx).deleteFrom.result;
				    
				}
				}
				break;
			}
			setState(100); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public CreateTableQuery result;
		public FirstLevelIdContext firstLevelId;
		public AttributeContext attribute;
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public FirstLevelIdContext firstLevelId() {
			return getRuleContext(FirstLevelIdContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(SQLGrammarParser.COMMA); }
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode CREATE() { return getToken(SQLGrammarParser.CREATE, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(SQLGrammarParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode TABLE() { return getToken(SQLGrammarParser.TABLE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(SQLGrammarParser.COMMA, i);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(SQLGrammarParser.RIGHT_PARENTHESIS, 0); }
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterCreateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitCreateTable(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createTable);

		    List<Attribute> attributes = new ArrayList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(CREATE);
			setState(103); match(TABLE);
			setState(104); ((CreateTableContext)_localctx).firstLevelId = firstLevelId();
			setState(105); match(LEFT_PARENTHESIS);
			setState(106); ((CreateTableContext)_localctx).attribute = attribute();

			        attributes.add(((CreateTableContext)_localctx).attribute.result);
			    
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(108); match(COMMA);
				{
				setState(109); ((CreateTableContext)_localctx).attribute = attribute();

				        attributes.add(((CreateTableContext)_localctx).attribute.result);
				    
				}
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117); match(RIGHT_PARENTHESIS);

			        ((CreateTableContext)_localctx).result =  new CreateTableQuery(((CreateTableContext)_localctx).firstLevelId.result, attributes);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public Attribute result;
		public FirstLevelIdContext firstLevelId;
		public DataTypeContext dataType;
		public FirstLevelIdContext firstLevelId() {
			return getRuleContext(FirstLevelIdContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); ((AttributeContext)_localctx).firstLevelId = firstLevelId();
			setState(121); ((AttributeContext)_localctx).dataType = dataType();

			        ((AttributeContext)_localctx).result =  new Attribute(((AttributeContext)_localctx).firstLevelId.result, ((AttributeContext)_localctx).dataType.result);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public Attribute.DataType result;
		public VarCharTypeContext varCharType;
		public VarCharTypeContext varCharType() {
			return getRuleContext(VarCharTypeContext.class,0);
		}
		public TerminalNode DOUBLE_TYPE() { return getToken(SQLGrammarParser.DOUBLE_TYPE, 0); }
		public TerminalNode INTEGER_TYPE() { return getToken(SQLGrammarParser.INTEGER_TYPE, 0); }
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitDataType(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dataType);
		try {
			setState(131);
			switch (_input.LA(1)) {
			case INTEGER_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(124); match(INTEGER_TYPE);

				        ((DataTypeContext)_localctx).result =  Attribute.IntegerType.getInstance();
				    
				}
				break;
			case DOUBLE_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(126); match(DOUBLE_TYPE);

				        ((DataTypeContext)_localctx).result =  Attribute.DoubleType.getInstance();
				    
				}
				break;
			case VAR_CHAR_TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(128); ((DataTypeContext)_localctx).varCharType = varCharType();

				        ((DataTypeContext)_localctx).result =  new Attribute.VarcharType(((DataTypeContext)_localctx).varCharType.length);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarCharTypeContext extends ParserRuleContext {
		public int length;
		public IntegerLiteralContext integerLiteral;
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public TerminalNode VAR_CHAR_TYPE() { return getToken(SQLGrammarParser.VAR_CHAR_TYPE, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(SQLGrammarParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(SQLGrammarParser.RIGHT_PARENTHESIS, 0); }
		public VarCharTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varCharType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterVarCharType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitVarCharType(this);
		}
	}

	public final VarCharTypeContext varCharType() throws RecognitionException {
		VarCharTypeContext _localctx = new VarCharTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varCharType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(VAR_CHAR_TYPE);
			setState(134); match(LEFT_PARENTHESIS);
			setState(135); ((VarCharTypeContext)_localctx).integerLiteral = integerLiteral();
			setState(136); match(RIGHT_PARENTHESIS);

			        ((VarCharTypeContext)_localctx).length =  ((VarCharTypeContext)_localctx).integerLiteral.result;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Object result;
		public IntegerLiteralContext integerLiteral;
		public DoubleLiteralContext doubleLiteral;
		public VarCharLiteralContext varCharLiteral;
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public DoubleLiteralContext doubleLiteral() {
			return getRuleContext(DoubleLiteralContext.class,0);
		}
		public VarCharLiteralContext varCharLiteral() {
			return getRuleContext(VarCharLiteralContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammarListener ) ((SQLGrammarListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(148);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139); ((ValueContext)_localctx).integerLiteral = integerLiteral();
